Add review changes

--- a/frontend/app/styles/app.css
+++ b/frontend/app/styles/app.css
@@ -26,6 +26,10 @@
   float: right !important;
 }
 
+.mt-1 {
+  margin-top: 1%;
+}
+
 .mt-3 {
   margin-top: 3%;
 }
@@ -36,6 +40,10 @@
 
 .x-toggle-component {
   width: 20%;
+}
+
+[role="button"] {
+  cursor: pointer;
 }
 
 li a {
