--- a/app/views/admin/teams/index.html.haml
+++ b/app/views/admin/teams/index.html.haml
@@ -9,8 +9,8 @@
 %table.table.table-striped#teamlist_table
   %tr
     %th.teamlist-row= t '.teamname'
-    %th.teamlist-row= t '.folders'
-    %th.teamlist-row= t '.accounts'
+    %th.teamlist-row= t '.num_folders'
+    %th.teamlist-row= t '.num_accounts'
     %th.teamlist-row= t '.members'
   - @teams.each do |team|
     - @team = team
