Remove unsused class

--- a/app/views/profile/index.html.haml
+++ b/app/views/profile/index.html.haml
@@ -13,7 +13,7 @@
     %a{"data-toggle" => "tab", href: "#api_users"}
       = t 'profile.api_users.api_users'
 
-.tab-content.teams-content.mb-2
+.tab-content.teams-content
   #info.tab-pane.fade.in.active
     = render 'info'
   #api_users.tab-pane.fade
