Add icon and fix size at several places

--- a/app/assets/javascripts/templates/_api_user_row.hbs.erb
+++ b/app/assets/javascripts/templates/_api_user_row.hbs.erb
@@ -50,8 +50,8 @@
         </div>
       </td>
       <td>
-        <a href='#'><img src=<%= image_path("refresh.svg") %> id='renew-user' class='action-icons'></a>
-        <a href='#'><img src=<%= image_path("remove.svg") %> id='remove-user' class='action-icons'></a>
+        <a href='#'><img src=<%= image_path("refresh.svg") %> id='renew-user' class='icon action-icons'></a>
+        <a href='#'><img src=<%= image_path("remove.svg") %> id='remove-user' class='icon action-icons'></a>
       </td>
   </tr>
 {{/each}}
