--- a/app/views/admin/users/index.html.haml
+++ b/app/views/admin/users/index.html.haml
@@ -28,15 +28,14 @@
 
       %td
         = Admin::UserRole::Dropdown.new(user, current_user).render
-      %td.action_icon
+      %td
         - if policy(user).edit? || policy(user).resetpassword?
-          = link_to image_pack_tag("edit.svg"), edit_admin_user_path(user)
-      %td.action_icon
+          = link_to image_pack_tag("edit.svg", class: 'icon'), edit_admin_user_path(user), class: 'action_icon'
         - if policy(user).destroy?
-          = link_to image_pack_tag("remove.svg"), '#',
+          = link_to image_pack_tag("remove.svg", class: 'icon'), '#',
             data: { last_teammember_teams_link: api_last_member_teams_path(user_id: user.id),
               user_id: user.id},
-            class: 'delete_user_link'
+            class: 'delete_user_link, action_icon'
 - if User::Human.locked.count != 0
   %h1= t '.locked'
   %table.table.table-striped
@@ -49,7 +48,7 @@
         %td= link_to user.username, edit_admin_user_path(user)
         %td= user.label
         %td.action_icon
-          = link_to image_pack_tag("unlock.svg"),  unlock_admin_user_path(user.id), title: t('.unlock')
+          = link_to image_pack_tag("unlock.svg", class: 'icon'),  unlock_admin_user_path(user.id), title: t('.unlock')
 
 %div{style: "height: 100px"}
 
