--- a/app/views/folders/show.html.haml
+++ b/app/views/folders/show.html.haml
@@ -10,12 +10,12 @@
 
 %table.table.table-striped
   %tr
-    %th{style: "width: 150px;"}= t '.account'
+    %th{style: "width: 170px;"}= t '.account'
     %th= t :description
     %th{colspan: "3"}= t :actions
   - @accounts.each do |account|
     %tr{class: "#{cycle('odd', 'even')}"}
-      %td= link_to image_pack_tag( "key.svg" ) + " " + account.accountname, account_path(account)
+      %td= link_to image_pack_tag( "key.svg", class: 'icon' ) + " " + account.accountname, account_path(account)
       %td= h account.description
-      %td.action_icon= link_to image_pack_tag("edit.svg"), "#/accounts/edit/#{account.id}",'data-turbolinks': 'false'
+      %td.action_icon= link_to image_pack_tag("edit.svg", class: 'icon'), "#/accounts/edit/#{account.id}",'data-turbolinks': 'false'
       %td.action_icon= link_to_destroy account_path(account), account
