--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -33,7 +33,8 @@
 // Example:
 // @link-color: #ff0000;
 
-@brand-primary: #2988bc;
+// earler: #2988BC;
+@brand-primary: #238BCA;
 @navbar-inverse-bg: @brand-primary;
 @navbar-inverse-link-color: white;
 @navbar-inverse-link-hover-bg: @navbar-inverse-link-active-bg;
