--- a/app/assets/javascripts/templates/_api_user_row.hbs.erb
+++ b/app/assets/javascripts/templates/_api_user_row.hbs.erb
@@ -42,11 +42,11 @@
       <td>
         <div id='active-api-user'
           {{#if attributes.locked}}
-            class='toggle-button toggle-button-selected'
+            class='toggle-button toggle-button-selected'>
           {{else}}
-            class='toggle-button'
+            class='toggle-button'>
           {{/if}}
-          ><button></button>
+          <button></button>
         </div>
       </td>
       <td>
