--- a/frontend/app/templates/components/account-show.hbs
+++ b/frontend/app/templates/components/account-show.hbs
@@ -1,1 +1,54 @@
-{{@account.name}}
+{{#if this.isPreview}}
+  <div class="thumbnail mt-3 account-thumbnail account-preview" {{on "click" this.swapToCredentialsView}} role="button">
+    <div class="account-accountname pt-10">
+      <img class="d-inline w-20" src="/ember/assets/images/key.svg" alt="key">
+      {{@account.accountname}}
+    </div>
+    <hr>
+    <div class="account-description">
+      {{truncate @account.description 40}}
+    </div>
+  </div>
+{{else}}
+  <div class="thumbnail mt-3 account-thumbnail account-detail">
+    <img class="d-inline mb-2" src="/ember/assets/images/key.svg" alt="key">
+    <h4 class="d-inline">{{@account.accountname}}</h4>
+    <div>
+      <div class="row p-2">
+        <div class="col-sm-8">
+          <Input @disabled="true" @value={{@account.cleartextUsername}}/>
+        </div>
+        <div class="">
+          <CopyButton @clipboardText={{@account.cleartextUsername}}>
+            <svg class="icon-clippy">
+              <use xlink:href="#icon-clippy"></use>
+            </svg>
+          </CopyButton>
+        </div>
+      </div>
+      <div class="row p-2">
+        <div class="col-sm-8">
+          <Input class="secret" @disabled="true" @value={{@account.cleartextPassword}}/>
+        </div>
+        <div class="">
+          <CopyButton @clipboardText={{@account.cleartextPassword}}>
+            <svg class="icon-clippy">
+              <use xlink:href="#icon-clippy"></use>
+            </svg>
+          </CopyButton>
+        </div>
+      </div>
+    </div>
+    <div class="mt-3 d-flex justify-content-between">
+      <a href={{concat "/accounts/" @account.id}}>
+        <img class="icon-button d-inline" src="/ember/assets/images/eye.svg" alt="show">
+      </a>
+      <LinkTo @route="accounts.edit" @model={{@account}}>
+        <img class="icon-button d-inline" src="/ember/assets/images/edit.svg" alt="edit">
+      </LinkTo>
+      <DeleteWithConfirmation @record={{@account}} @didDelete={{this.refreshRoute}}>
+        <img class="icon-button d-inline" src="/ember/assets/images/delete.svg" alt="delete">
+      </DeleteWithConfirmation>
+    </div>
+  </div>
+{{/if}}
