--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -5,7 +5,9 @@
 @glyphiconsEotPath_iefix: font-url("glyphicons-halflings-regular.eot?#iefix");
 @glyphiconsWoffPath: font-url("glyphicons-halflings-regular.woff");
 @glyphiconsTtfPath: font-url("glyphicons-halflings-regular.ttf");
-@glyphiconsSvgPath: font-url("glyphicons-halflings-regular.svg#glyphicons_halflingsregular");
+@glyphiconsSvgPath: font-url(
+  "glyphicons-halflings-regular.svg#glyphicons_halflingsregular"
+);
 
 // Set the Font Awesome (Font Awesome is default. You can disable by commenting below lines)
 @fontAwesomeEotPath: font-url("fontawesome-webfont.eot");
@@ -31,7 +33,7 @@
 // Example:
 // @link-color: #ff0000;
 
-@brand-primary: #2988BC;
+@brand-primary: #2988bc;
 @navbar-inverse-bg: @brand-primary;
 @navbar-inverse-link-color: white;
 @navbar-inverse-link-hover-bg: @navbar-inverse-link-active-bg;
