--- a/frontend/app/templates/components/account-show.hbs
+++ b/frontend/app/templates/components/account-show.hbs
@@ -14,7 +14,7 @@
   </div>
 {{else}}
   <div class="thumbnail mt-3 account-thumbnail account-detail">
-    <img class="d-inline mb-2" src="/ember/assets/images/key.svg" alt="key">
+    <img class="d-inline mb-2 account-detail-key" src="/ember/assets/images/key.svg" alt="key">
     <h4 class="d-inline">{{@account.accountname}}</h4>
     <div>
       <div class="row p-2">
