--- a/frontend/app/templates/components/folder-show.hbs
+++ b/frontend/app/templates/components/folder-show.hbs
@@ -1,26 +1,22 @@
 {{#if this.isFolderEditing}}
   <FolderForm @folder={{@folder}} @onAbort={{this.toggleFolderEdit}}/>
 {{/if}}
-<div class="accordion mt-3" id={{concat "folderAccordion-" @folder.id}}>
-  <div id={{concat "folderHeading-" @folder.id}}>
-    <div class="mb-0" role="button" data-toggle="collapse" data-target={{concat "#folderCollapse-" @folder.id}} aria-expanded="true" aria-controls={{concat "#folderCollapse-" @folder.id}}>
-      <div class="d-flex flex-row justify-content-between">
-        <div>
-          <h2 class="folder-header d-inline">{{@folder.name}}</h2>
-        </div>
-        <div>
-          <a role="button" {{on "click" this.toggleFolderEdit}}>
-            <img class="icon-button folder-edit-icon" src="/ember/assets/images/edit.svg" alt="edit">
-          </a>
-        </div>
-      </div>
-      <hr class="folder-divider">
+<div class="mb-0" role="button" {{on "click" this.collapse}}>
+  <div class="d-flex flex-row justify-content-between">
+    <div>
+      <h2 class="folder-header d-inline">{{@folder.name}}</h2>
     </div>
-    <div id={{concat "folderCollapse-" @folder.id}} class="collapse" aria-labelledby={{concat "#folderHeading-" @folder.id}} data-parent={{concat "#folderAccordion-" @folder.id}}>
-      {{@folder.description}}
-      {{#each @folder.accounts as |account|}}
-        <AccountShow @account={{account}}/>
-      {{/each}}
+    <div>
+      <a role="button" {{on "click" this.toggleFolderEdit}}>
+        <img class="icon-button folder-edit-icon" src="/ember/assets/images/edit.svg" alt="edit">
+      </a>
     </div>
   </div>
+  <hr class="folder-divider">
 </div>
+<BsCollapse @collapsed={{this.collapsed}}>
+  {{@folder.description}}
+  {{#each @folder.accounts as |account|}}
+    <AccountShow @account={{account}}/>
+  {{/each}}
+</BsCollapse>
