--- a/frontend/app/templates/application.hbs
+++ b/frontend/app/templates/application.hbs
@@ -1,5 +1,11 @@
 <NavBar />
 <div id="sidebar">
+
+  <div class="navbar-header">
+    <a href="" class="navbar-logo"><img src="ember/assets/images/cryptopussy_without_text.svg" alt="logo" class="logo-icon"></a>
+    <a href="" class="navbar-brand">Cryptopus</a>
+  </div>
+
   <nav class="navbar navbar-inverse nav-side-bar">
     <SideNavBar @teams={{this.model}} />
   </nav>
