--- a/frontend/app/styles/app.scss
+++ b/frontend/app/styles/app.scss
@@ -310,26 +310,12 @@ li a {
   cursor: default;
 }
 
-.list-group.list-group-root > .list-group > .list-group-item:first-child {
-  border-top-color: #238bca;
-}
-
-.list-group.list-group-root
-  > .list-group
-  > .list-group-item:first-child.selected-nav-entry {
-  border-top-color: #16416c;
-  border-bottom-color: #16416c;
-}
-
 .list-group.list-group-root > .list-group > .list-group-item {
   padding-left: 45px;
   margin-top: 1px;
   border-width: 0px;
   border-top-width: 1px;
-  border-color: #1b6d9f;
-}
-
-.top-item {
+  border-color: #16416c;
 }
 
 .bg-blue-one {
@@ -350,7 +336,7 @@ li a {
 #sidebar {
   width: 250px;
   position: fixed;
-  top: 51px;
+  top:0px;
   left: 0;
   height: 100vh;
   z-index: 999;
@@ -363,4 +349,8 @@ li a {
 
 #teams-show-container {
   margin-left: 27%;
+}
+
+.logo-icon {
+  height: 40px;
 }
